# TimeSeries

./: .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .yamllint  README.md  attack_plan.md  code-quality-plan.md  docker-compose.yml  dockerfile  idears.md  notebook.ipynb  project_plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci-requirements.txt  ci.yaml  ci_backend.yaml  ci_frontend.yaml  codeql-analysis.yml
.timeseries/: pyvenv.cfg
.timeseries.3.12/: pyvenv.cfg
backend/: first_steps.py  main.py  streamlit.py
backend/Cleaning/models/: feature_extraction.py
backend/Cleaning/models/data/: data_loader.py  data_preprocessing.py  evaluation.py  forecasting.py  nbeats_model.py  prophet_model.py  training.py  tsmixer_model.py
backend/api/routes/: forecast.py
backend/api/schemas/: requests.py
backend/app/: config.py  dependencies.py  main.py  streamlit.py
backend/application/: forecasting.py
backend/application/services/: forecasting_service.py  validation_service.py
backend/config/: config_loader.py  hardware_config.yaml  model_config.yaml  training_config.yaml  visualization.yaml
backend/core/: backtester.py  evaluator.py  exceptions.py  forecaster.py  model_factory.py  trainer.py
backend/core/interfaces/: base_model.py  model.py  protocols.py
backend/data/: data_loader.py  data_preprocessing.py
backend/domain/models/boosting/: ngboost_model.py  xgboost_model.py
backend/domain/models/deep_learning/: N-HiTS_model.py  TFT_model.py  base_config.py  nbeats.py  nhits_model.py  tide_model.py  time_mixer.py
backend/domain/models/experimental/: chronos_model.py  mamba_model.py
backend/domain/models/statistical/: arima_model.py  ets_model.py  prophet.py
backend/domain/services/: forecasting.py  preprocessing.py  training.py
backend/infrastructure/results/: explainable_ai.py
backend/infrastructure/ui/: components.py
backend/models/: N-HiTS_model.py  TFT_model.py  base_model.py  chronos_model.py  forecasting.py  mamba_model.py  nbeats_model.py  ngboost_model.py  prophet_model.py  tide_model.py  time_mixer.py  training.py
backend/models/data/: data_preprocessing.py  forecasting.py  prophet_model.py  training.py
backend/tests/: conftest.py  test_data_handler.py  test_forecasting.py  test_integration.py  test_models.py  test_my_module.py  test_streamlit_mocks.py  test_training.py  verify_core.py
backend/tools/: benchmark.py
backend/utils/: app_components.py  data_handling.py  exceptions.py  hyperparameter_optimization.py  metrics.py  model_utils.py  plotting.py  scaling.py  session_state.py  tensor_utils.py  time_utils.py  training_callbacks.py  ui_components.py  warning_filters.py
cache/: vic_elec.csv  vic_elec.parquet
darts_logs/nbeats/: _model.pth.tar
darts_logs/nbeats_model/logs/: events.out.tfevents.1727556663.MacBook-Pro-von-Martin.local  events.out.tfevents.1727556819.MacBook-Pro-von-Martin.local  events.out.tfevents.1727556826.MacBook-Pro-von-Martin.local  hparams.yaml
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: D3Chart.tsx  ForecastGenerator.tsx  Sidebar.tsx
k8s/: deployment.yaml  service.yaml
notebooks/: 0_1_warm_up.ipynb  1_1_time Series basics.ipynb  Chronos.ipynb  test_crawl_crypto.ipynb
notebooks/Anomaly detection/: Firststepts.ipynb  Firststepts_anomaly.ipynb
notebooks/Darts/: 0_Darts_Generate_Data.ipynb  1_Darts_preprocessing.ipynb  4_Darts_Time_Mixer.ipynb  model_comparison_metrics.csv  short description.md
notebooks/Darts/darts_logs/LSTM_model/logs/: events.out.tfevents.1726359722.MacBook-Pro-von-Martin.local  events.out.tfevents.1726359725.MacBook-Pro-von-Martin.local  events.out.tfevents.1726359726.MacBook-Pro-von-Martin.local  hparams.yaml
notebooks/Other/: legacy.ipynb  test_crawl_crypto.ipynb
notebooks/Other/cache/: vic_elec.csv  vic_elec.parquet
notebooks/preprocessing/: preprocessing.ipynb
scripts/: migrate_codebase.py
src/: fist_steps.py  streamlit.py
src/data/: data_loader.py
src/models/: chronos_model.py  nbeats_model.py  prophet_model.py  tide_model.py
src/tests/: test_my_module.py
src/utils/: app_components.py  data_handling.py  metrics.py  plotting.py
